add new service

--- a/src/styles.css
+++ b/src/styles.css
@@ -73,7 +73,7 @@ button{
 }
 .sidebar-hero{
     height: 180px;
-    background-image: url("./assets/images/background.jpg");
+    background-image: url("/assets/images/background.jpg");
     color: white;
     padding: 60px 20px;
     text-align: center;
