--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,8 +1,8 @@
 <div class="header-container">
   <div class="header-logo">MYSITE</div>
   <div class="header-nav">
-      <a href="#" >HOME</a>
-      <a href="#" >ADMIN</a>
+      <a href="#" (click)="HomeClicked()">HOME</a>
+      <a href="#" (click)="AdminClicked()">ADMIN</a>
       <button class="header-button" (click)="OnSubscribe()">SUBSCRIBE</button>
   </div>
 </div>
